fix spacing of some lists

--- a/themes/weltstrap3/assets/css/theme.css
+++ b/themes/weltstrap3/assets/css/theme.css
@@ -191,3 +191,11 @@ footer a,footer a:hover,footer a:focus {
   color: #46beac;
   text-decoration: none;
 }
+
+/*
+ misc style
+*/
+
+.glyphicon, time.listdate {
+  padding-right: .5em;
+}
